[package]
name = "maybe_bug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.6", features = [ "dynamic" ] }
bevy-inspector-egui = "0.9"
bevy_prototype_lyon = "0.4.0"
bevy_rapier2d = { version = "0.12" }
rand = "0.8"
nalgebra = "*"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
